add kotlin code in Service Data and Add Service

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,4 +49,17 @@
     <string name="card_pegawai_bhubungi">Contact</string>
     <string name="card_pegawai_blihat">See</string>
     <string name="card_pegawai_nohp">Phone Number</string>
+    <string name="card_layanan_harga">Price</string>
+    <string name="sukses_simpan_layanan">Services data has been successfully saved!</string>
+    <string name="gagal_simpan_layanan">Failed to save service data!</string>
+    <string name="card_tambah_layanan">Add Service</string>
+    <string name="card_harga_layanan">Service Price</string>
+    <string name="tvAlamatCabang">Branch Address</string>
+    <string name="tvNoHpCabang">Branch Phone Number</string>
+    <string name="tvManagerCabang">Branch Manager</string>
+    <string name="tvTambahCabang">Add Branch</string>
+    <string name="greeting_morning">Good morning,</string>
+    <string name="greeting_afternoon">Good afternoon,</string>
+    <string name="greeting_evening">Good evening,</string>
+    <string name="greeting_night">Good night,</string>
 </resources>
