--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -187,4 +187,5 @@
     <string name="silakanpilihlayanan">Silakan Pilih Layanan Terlebih Dahulu</string>
     <string name="batalpilihpelanggan">Batal memilih pelanggan</string>
     <string name="batalpilihlayanan">Batal memilih layanan</string>
+    <string name="masukkanpassword">Masukkan Password</string>
 </resources>
